--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,3 +23,4 @@
   &copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}, {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.<br />
   Site last updated {{ "now" | date: '%Y-%m-%d' %}}
 </div>
+<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=1fqR6hvAYQ3-Wgv_s4fC-ko3rKEBvDiaTHF6P54mf_M"></script>
