--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -14,9 +14,9 @@
   clear: both;
 
   /* sticky footer fix start */
-  position: absolute;
+  /*position: absolute;
   bottom: 0em;
-  height: auto;
+  height: auto;*/
   /* sticky footer fix end */
 
   margin-top: 3em;
