--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,3 +24,6 @@
   Site last updated {{ "now" | date: '%Y-%m-%d' %}}
 </div>
 
+<div id="clustrmaps-widget">
+    <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=1fqR6hvAYQ3-Wgv_s4fC-ko3rKEBvDiaTHF6P54mf_M"></script>
+</div>
